--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "weekly-agenda",
+  "name": "week-planner",
   "version": "0.1.0",
   "private": true,
+  "quokka": {
+    "babel": {
+      "presets": ["react-app"]
+    }
+  },
   "dependencies": {
     "firebase": "^5.4.2",
     "moment": "^2.22.2",
