--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
@@ -8,6 +6,9 @@
 
 # production
 /build
+
+#keys
+/firebase
 
 # misc
 .DS_Store
