--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "quokka": {
     "babel": {
-      "presets": ["react-app"]
+      "presets": [
+        "react-app"
+      ]
     }
   },
   "dependencies": {
-    "firebase": "^5.4.2",
+    "firebase": "^5.5.1",
     "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
