--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^16.4.2",
     "react-redux": "^5.1.0",
     "react-scripts": "1.1.5",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
