--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     }
   },
   "dependencies": {
+    "enzyme": "^3.7.0",
     "firebase": "^5.5.1",
     "flickity": "^2.1.2",
-    "jest-cli": "^23.6.0",
     "moment": "^2.22.2",
+    "jest": "20.0.4",
+    "jest-cli": "20.0.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.1.0",
@@ -27,5 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme-adapter-react-16": "^1.7.0"
   }
 }
