--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "enzyme": "^3.7.0",
     "firebase": "^5.5.1",
     "flickity": "^2.1.2",
-    "moment": "^2.22.2",
     "jest": "20.0.4",
     "jest-cli": "20.0.4",
+    "jscs": "^3.0.7",
+    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.1.0",
